--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* RESET */
 * {
   margin: 0;
   padding: 0;
@@ -12,12 +13,14 @@ html, body {
   font-family: system-ui, sans-serif;
 }
 
+/* CONTAINER */
 #container {
   position: relative;
   width: 100vw;
   height: 100vh;
 }
 
+/* IMAGES */
 .image {
   position: absolute;
   inset: 0;
@@ -30,22 +33,21 @@ html, body {
 .front {
   --x: 50%;
   --y: 50%;
-  clip-path: ellipse(120px 90px at var(--x) var(--y));
-  transition: clip-path 0.08s linear;
+  clip-path: circle(0px at var(--x) var(--y));
 }
 
 /* TEXT */
 .text {
   position: absolute;
   inset: 0;
-  z-index: 5;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  pointer-events: none;
-  color: white;
   text-align: center;
+  color: white;
+  pointer-events: none;
 }
 
 .text h1 {
